--- a/.gitignore
+++ b/.gitignore
@@ -3,4 +3,6 @@ data/App_data.db
 data/keywords.json
 *.log
 resources/*/*
+# to keep empty resource folders
 !resources/*/.gitignore
+**/__pycache__/
