fixed pep8 error

--- a/config/controls.yml
+++ b/config/controls.yml
@@ -42,5 +42,5 @@ style:
   embeds:
     color: 0xc500ff
     length: 10
-  status: w00t w00t w00t
+  status: UNFORTUNATELY MY BRAIN HAS BEEN SCRAMBLED. ASK ZAIN FOR ACCESS TO MAKE ME RETARDED AGAIN.
 network: ~
